# quirck

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
etc/: gunicorn.conf.py
etc/oidc-dev/: Dockerfile  clients.json  config.json  identity.json  users.json
etc/systemd/: quirck-web.service  quirck-web.socket  quirck.socket
quirck/: __main__.py
quirck/auth/: form.py  jwk.py  middleware.py  model.py  oauth.py  router.py
quirck/box/: cleanup.py  config.py  docker.py  exception.py  meta.py  model.py  vpn.py
quirck/box/helper/: Dockerfile  start.sh
quirck/box/relay/: Dockerfile  client-connect.sh  client-disconnect.sh  learn-address.sh  openvpn.conf  start.sh  up.sh
quirck/core/: config.py  form.py  module.py  s3.py
quirck/db/: base.py  engine.py  middleware.py
quirck/web/: app.py  handlers.py  template.py  worker.py
