[tool.poetry]
name = "quirck"
version = "2023.1"
description = "Personalized Docker Assignment Platform"
authors = ["Nikita Sychev"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.46.1"
uvicorn = "^0.34.0"
Jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
aioboto3 = "^14.1.0"
httpx = "^0.28.1"
SQLAlchemy = {version = "^2.0.40", extras = ["asyncio", "mypy"]}
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
itsdangerous = "^2.2.0"
PyJWT = {extras = ["crypto"], version = "^2.10.1"}
cryptography = "^44.0.2"
aiodocker = "^0.24.0"
Starlette-WTF = "^0.4.5"
pytz = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
