[project]
name = "quirck"
version = "2026.1"
description = "Personalized Docker Assignment Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.5.0",
    "aiodocker>=0.26.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.22",
    "pytz",
    "sqlalchemy[asyncio]>=2.0.48",
    "starlette>=0.52.1",
    "starlette-wtf>=0.4.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quirck"
module-root = ""